--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; background:#f4f4f4; }
-    h1,h2,h3{ color:#333 }
+    h1{ color:#096ae9 } h2,h3{ color:#333 }
 
     /* 🌈 Pretty navbar (same style as billing/stock) */
     .nav {
@@ -74,7 +74,7 @@
 
     table{ width:100%; border-collapse:collapse; margin-top:12px; background:#fff; }
     th,td{ border:1px solid #ddd; padding:8px; text-align:left }
-    th{ background:#f72307; color:#fff }
+    th{ background:#3aa36a; color:#fff }
     tr:nth-child(even){ background:#f9f9f9 }
 
     .section {
@@ -90,7 +90,7 @@
   </style>
 </head>
 <body>
-  <h1>📊 Dashboard</h1>
+ 
 
   <!-- Navigation (pill style) -->
   <div class="nav">
@@ -99,6 +99,8 @@
     <a href="billing.html" class="billing">🧾 Billing</a>
     <a href="reports.html" class="reports">📈 Reports</a>
   </div>
+
+  <h1>📊 Dashboard</h1>
 
   <!-- Top summary cards -->
   <div class="cards">
