--- a/stock.html
+++ b/stock.html
@@ -5,7 +5,8 @@
   <title>📦 Stock Management (Admin Secured)</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; background:#f4f4f4; }
-    h1,h2,h3{ color:#333 }
+    h1{ color:#096ae9}
+    h2,h3{ color:#333 }
     table{ width:100%; border-collapse:collapse; margin-top:12px }
     th,td{ border:1px solid #ddd; padding:8px; text-align:left }
     th{ background:#007bff; color:#fff }
@@ -52,7 +53,7 @@
   </style>
 </head>
 <body>
-  <h1>📦 Stock Management</h1>
+ 
 
   <!-- 🌈 Navbar -->
   <nav class="navbar">
@@ -61,6 +62,9 @@
     <a href="billing.html" class="nav-link billing">🧾 Billing</a>
     <a href="reports.html" class="nav-link reports">📈 Reports</a>
   </nav>
+
+  <h1>📦 Stock Management</h1>
+
 
   <!-- Add Product Form -->
   <form id="stockForm">
