--- a/reports.html
+++ b/reports.html
@@ -5,7 +5,7 @@
   <title>Reports</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; background:#f4f4f4; }
-    h1,h2,h3{ color:#333 }
+    h1{ color:#096ae9}h2,h3{ color:#333 }
     button{ padding:8px; margin-bottom:8px; max-width:320px; background:#28a745; color:#fff; border:none; cursor:pointer }
     button:hover{ background:#218838 }
     .controls { display:flex; gap:12px; align-items:flex-end; flex-wrap:wrap }
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-  <h1>📊 Reports</h1>
+ 
 
   <!-- Navigation -->
   <div class="nav">
@@ -60,6 +60,8 @@
     <a href="billing.html" class="billing">🧾 Billing</a>
     <a href="reports.html" class="reports">📈 Reports</a>
   </div>
+
+  <h1>📊 Reports</h1>
 
   <div class="report">
     <h2>Generate Reports</h2>
